syntax = "proto3";

package cn.organization.v1;

service Organization {
  rpc ListOrganization(ListOrganizationRequest) returns (OrganizationList);
  rpc ListOrganizationByIdsOrTerm(OrganizationSearchRequest) returns (OrganizationList);
}

message OrganizationSearchRequest {
  repeated int32 organization_ids = 1;
  string org_term = 2;
}

message ListOrganizationRequest {
  // standard sort+paging parameters
  int32 sort_property = 1;
  bool sort_ascending = 2;
  int32 offset = 3;
  int32 page_size = 4;
}

message OrganizationList {
  repeated OrganizationModel organizations = 1;
}

message OrganizationModel {
  int32 org_id = 1;
  string org_name = 2;

  // "complete response"
  int32 parent_id = 3;
  int32 system_org_id = 4;
}
